// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmLiTransaction has the expected html structure 1`] = `
<div
  class="tm-li-tx tm-li-tx-received"
  devmode="true"
>
  <div
    class="tx-icon"
  >
    <i
      class="material-icons"
    >
      add_circle
    </i>
  </div>
  <div
    class="tx-container"
  >
    <div
      class="tx-element tx-coins"
    >
      <div
        class="tx-coin"
      >
        <div
          class="key"
        >
          JBCOINS
        </div>
        <div
          class="value"
        >
          1,234.00
        </div>
      </div>
    </div>
    <div>
      <!---->
      <div
        class="tx-element tx-address"
      >
        Received from tb1da6xsetjg9jxgun9wdesexv05j
      </div>
    </div>
  </div>
</div>
`;

exports[`TmLiTransaction should show all coins of the transaction 1`] = `
<div
  class="tm-li-tx tm-li-tx-received"
  devmode="true"
>
  <div
    class="tx-icon"
  >
    <i
      class="material-icons"
    >
      add_circle
    </i>
  </div>
  <div
    class="tx-container"
  >
    <div
      class="tx-element tx-coins"
    >
      <div
        class="tx-coin"
      >
        <div
          class="key"
        >
          JBCOINS
        </div>
        <div
          class="value"
        >
          1,234.00
        </div>
      </div>
      <div
        class="tx-coin"
      >
        <div
          class="key"
        >
          FABOCOINS
        </div>
        <div
          class="value"
        >
          1.00
        </div>
      </div>
      <div
        class="tx-coin"
      >
        <div
          class="key"
        >
          MATTCOINS
        </div>
        <div
          class="value"
        >
          42.00
        </div>
      </div>
    </div>
    <div>
      <!---->
      <div
        class="tx-element tx-address"
      >
        Received from tb1da6xsetjg9jxgun9wdesexv05j
      </div>
    </div>
  </div>
</div>
`;
